--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Ankeet chavan</title>
 </head>
 <body style="background-color: black;">
-    <h1>ANKEET CHAVAN TESTING SITE</h1>
+    <h1 style="color:white;">ANKEET CHAVAN TESTING SITE</h1>
 </body>
 </html>
