--- a/cricketExplorer/index.html
+++ b/cricketExplorer/index.html
@@ -85,6 +85,9 @@
 
         <h1 class="mb-5">CRICKET EXPLORER™
         </h1>
+        <div>
+            <img src="./image.png" alt="icon" width="300" height="300" style="border-radius: 50%; margin-bottom: 50px;">
+        </div>
         <button class="mb-5" onclick="redirectToLink()"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60"
                 fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
                 <path
