--- a/mastanBaba/index.html
+++ b/mastanBaba/index.html
@@ -6,7 +6,7 @@
 
 
 	
-	<title>SATISH MEHTA</title>
+	<title>MASTAN BABA</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
@@ -34,7 +34,7 @@
 			<div class="display-table center-text">
 				<div class="display-table center-text marginTop">
 					<h2 >Best Cricket Tipper</h2>
-					<h1 class="marginTop">👑 Mastan Baba Official 👑                        👑</h1>
+					<h1 class="marginTop">👑 Mastan Baba 👑</h1>
 					<div class="button-container center-text marginTop ">
 						<button onclick="redirectToLink()">
 							<svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor"
