--- a/vikas/index.html
+++ b/vikas/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="martop">
-      <a href="https://telegram.me/+G5JOykjhGf42MTIx" class="blink ">
+      <a href="https://telegram.dog/+-nBoeM7XqQM4MWI1" class="blink ">
       <i class="fa-brands fa-telegram fa-flip"></i> JOIN NOW FOR FREE <i class="fa-brands fa-telegram fa-flip"></i></a>
 
  
