--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <span class="timer" id="countdown">1:00</span>
     <div class="second counter">Seconds Left</div>
     
-  <img src="/img/image.png"/>
+  <img src="/img/image.png" width="150px" height="150px"/>
    
 
    
@@ -37,7 +37,6 @@
         JOIN THE CHANNEL NOW <i class="fa-brands fa-telegram " aria-hidden="true"></i></a>
     </div>
    
-    <div><h4 class="mgtp">Back To Back 20 Matches Pass 😎</h4></div> 
     <div><h4 class="mgtp">⚡👍Bas Follow karte Rahe ⚡    </h4></div> 
     <div><h4 class="mgtp">⚡ Accuracy & Record Khud dhikh jayga ⚡</h4></div> 
 
