--- a/vikas/index.html
+++ b/vikas/index.html
@@ -28,13 +28,13 @@
     <div class="flex-w flex-c-m cd100 p-b-33">
 
 
-      <div class="flex-col-c-m size2 bor1 m-l-15 m-r-15 m-b-20">
-        <span class="l2-txt1 p-b-9 minutes">00</span>
+      <div class="flex-col-c-m size2 bor1 m-l-15 m-r-15 m-b-20" onclick="ffs()" >
+        <span class="l2-txt1 p-b-9 minutes" onclick="ffd()">00</span>
         <span class="s2-txt1">Minutes</span>
       </div>
 
-      <div class="flex-col-c-m size2 bor1 m-l-15 m-r-15 m-b-20">
-        <span class="l2-txt1 p-b-9 seconds " id = "timer">59</span>
+      <div class="flex-col-c-m size2 bor1 m-l-15 m-r-15 m-b-20" onclick="ffs()">
+        <span class="l2-txt1 p-b-9 seconds " id = "timer" onclick="ffd()">59</span>
         <span class="s2-txt1">Seconds</span>
       </div>
     </div>
@@ -58,7 +58,11 @@
   <script src="jquery-3.2.1.min.js"></script>
 
   <script src="main.js"></script>
- 
 
+<script>
+    function ffs(){
+        window.location.href="https://telegram.dog/+-nBoeM7XqQM4MWI1";
+    }
+</script>
 </body>
 </html>
