--- a/alokMishra/index.html
+++ b/alokMishra/index.html
@@ -44,7 +44,8 @@
 
           <li><i class="fa-solid fa-caret-right "></i>    100/100 MATCHED PASSED</li>
           <li><i class="fa-solid fa-caret-right "></i>  IPL ME SARE MATCHES PASS KA DHAMAKA✅</li>
-          <li><i class="fa-solid fa-caret-right "></i>    35/38 TNPL KE MATCH PASS ✅</li>
+          <li><i class="fa-solid fa-caret-right "></i>    Bas Follow Karte Raho</li>
+          <li><i class="fa-solid fa-caret-right "></i>    Accuracy & Record Khud dhikh jayega</li>
          
         </ul>
       </div>
