--- a/vikas/index.html
+++ b/vikas/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>VIKAS</title>
+<title>VIKASH</title>
 <link rel="stylesheet" href="style1.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
 <body>
   <div class="hero">
     <p class="paragraph"> Cricket Mastermind </p>
-    <h1 class="heading1">👑 VIKAS 👑</h1>
+    <h1 class="heading1">👑 VIKASH 👑</h1>
 
     <div class="flex-w flex-c-m cd100 p-b-33">
 
