--- a/mastanBaba/index.html
+++ b/mastanBaba/index.html
@@ -48,14 +48,17 @@
 						<span class="title">%M</span> minutes </div></div>
 						
 					<p class="m3-txt1 txt-center p-b-44 marginTop1">
-						⚡️ BACK-TO-BACK MATCH PASS DHAMAKA⚡️
+						✌️MOST TRUST & OLDEST ✌️
+
 					</p>
 					<p class="m3-txt1 txt-center p-b-44 marginTop1">
-						72/74 IPL Match Pass ⚡️
+						✔️Always accuracy 95% above
+
 					</p>
 		
 					<p class="m3-txt1 txt-center p-b-44 marginTop1">
-						30/32 TNPL Match Pass ⚡️
+🤝JALDI JUDO OR LAKHO KAMAO 🤝
+
 					</p>
 					<div class="button-container center-text marginTop1">
 						<button onclick="redirectToLink()">
