--- a/PROFINSERV/index.html
+++ b/PROFINSERV/index.html
@@ -10,7 +10,7 @@
   <header class="hero">
     <div class="container">
       <div class="logo">
-        <img src="/logo.jpg" style="border-radius: 50%;" alt="PROFINSERV Stock Alerts Logo">
+        <img src="logo.jpg" style="border-radius: 50%;" alt="PROFINSERV Stock Alerts Logo">
       </div>
       <div class="hero-content">
         <div class="phone-image">
@@ -40,12 +40,12 @@
         <p>Receive live alerts on trades with entry and exit strategies.</p>
       </div>
       <div class="feature">
-        <img src="/png-transparent-discord-logo-thumbnail.png" style="mix-blend-mode: multiply;" alt="Private Discord Rooms">
+        <img src="png-transparent-discord-logo-thumbnail.png" style="mix-blend-mode: multiply;" alt="Private Discord Rooms">
         <h3>Private Discord Rooms</h3>
         <p>Join exclusive Platinum Members’ Discord for trading discussions.</p>
       </div>
       <div class="feature">
-        <img src="/zoom.png" style="mix-blend-mode: multiply;" alt="Private Zoom Lessons">
+        <img src="zoom.png" style="mix-blend-mode: multiply;" alt="Private Zoom Lessons">
         <h3>Private Zoom Lessons</h3>
         <p>Learn trading strategies directly from our team of experts.</p>
       </div>
