--- a/PROFINSERV/index.html
+++ b/PROFINSERV/index.html
@@ -27,7 +27,7 @@
   <header class="hero">
     <div class="container">
       <div class="logo">
-        <img src="/logo.jpg" style="border-radius: 50%;" alt="PROFINSERV Stock Alerts Logo">
+        <img src="logo.jpg" style="border-radius: 50%;" alt="PROFINSERV Stock Alerts Logo">
       </div>
       <div class="hero-content">
         <div class="phone-image">
