--- a/PROFINSERV/index.html
+++ b/PROFINSERV/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Platinum Stock Alerts</title>
+  <title>ProFinserv Stock</title>
   <link rel="stylesheet" href="styles.css">
   <!-- Meta Pixel Code -->
 <script>
@@ -43,7 +43,7 @@
           <a href="https://telegram.dog/+zaXnGU5EczczMmFl" class="btn">Join Now</a>
         </div>
         <div class="phone-image">
-            <img src="cex-io-1-2x.png" alt="Trading Chart on Phone">
+            <img src="stock.webp" alt="Trading Chart on Phone">
           </div>
       </div>
     </div>
