--- a/anvi/index.html
+++ b/anvi/index.html
@@ -22,7 +22,7 @@ src="https://www.facebook.com/tr?id=1182348923129173&ev=PageView&noscript=1"
 
 
 	
-	<title>MASTAN BABA</title>
+	<title>Anvi Singhania</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
@@ -45,12 +45,12 @@ src="https://www.facebook.com/tr?id=1182348923129173&ev=PageView&noscript=1"
 </head>
 <body>
 	
-		<section class="left-section" style="background-image: url(images/new.jpeg)">
+		<section class="left-section" style="background-image: url(images/IMG-20241213-WA0001.jpg)">
 		
 			<div class="display-table center-text">
 				<div class="display-table center-text marginTop">
 					<h2 >Best Cricket Tipper</h2>
-					<h1 class="marginTop">👑 Mastan Baba 👑</h1>
+					<h1 class="marginTop">Anvi Singhania</h1>
 					<div class="button-container center-text marginTop ">
 						<button onclick="redirectToLink()">
 							<svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor"
