--- a/rohitKhattar/index.html
+++ b/rohitKhattar/index.html
@@ -68,7 +68,7 @@ src="https://www.facebook.com/tr?id=1410753172954776&ev=PageView&noscript=1"
 
     
     <div class="button">
-      <a href="https://telegram.me/+23jBEulFTrw2NjI9" class="btnsize btn btn--stripe">
+      <a href="https://telegram.me/+rcRAJU3Isxk5MTQ1" class="btnsize btn btn--stripe">
         JOIN NOW FOR FREE <i class="fa-brands fa-telegram " aria-hidden="true"></i></a>
     </div>
     
