--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
    
     <div><h4 class="mgtp">⚡👍Bas Follow karte Rahe ⚡    </h4></div> 
     <div><h4 class="mgtp">⚡ Accuracy & Record Khud dhikh jayga ⚡</h4></div> 
+    <div><h4 class="mgtp"> Created & Managed by <a href="https://t.me/+149E67MFP3o0NTFl">@AAAgency2017</a></h4></div> 
 
 
    
   </div>
+
 
   <script>
     let remainingSeconds = 60;
