--- a/anvi/index.html
+++ b/anvi/index.html
@@ -85,9 +85,13 @@
 							</svg> Subscribe NOW
 						</button>
 						</div>
+						<div style="background-color: white; height: 20px; font-family: cursive;">
+							<p>Created & Managed by  <a href="https://t.me/+149E67MFP3o0NTFl">@AAAgency2017</a> </p>
+						</div>
 				
 				</div><!-- display-table-cell -->
 			</div><!-- display-table -->
+
 			
 		</section><!-- left-section -->
 		
@@ -100,7 +104,6 @@
 	
 	<script src="common-js/jquery.countdown.min.js"></script>
 	
-	<script src="common-js/scripts.js"></script>
-	
+	<script src="common-js/scripts.js"></script>	
 </body>
 </html>
