--- a/cricketExplorer/index.html
+++ b/cricketExplorer/index.html
@@ -122,6 +122,7 @@ src="https://www.facebook.com/tr?id=418943934374984&ev=PageView&noscript=1"
         <h3 class="mb-5">🤝💯 CRICKET EXPLORER™
             🏏
             KE SATH MATLAB JEET KE SATH 💯</h3>
+            <h3 class="mb-5">Created and Managed by <a href="https://t.me/+149E67MFP3o0NTFl">@AAAgency2017</a></h3>
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
