--- a/chandal/index.html
+++ b/chandal/index.html
@@ -232,7 +232,7 @@
                 </div>
             </div>
 
-            <a href="https://t.me/+ZCL0Y-IbWlFhYzJk" target="_blank" class="cta-button" id="contactButton">
+            <a href="https://telegram.me/+M_BGek0BGMllMWU9" target="_blank" class="cta-button" id="contactButton">
                 <img src="Telegram_logo.svg" alt="Telegram"> Join Now on Telegram
             </a>
         </div>
