--- a/ankeetChavan/index.html
+++ b/ankeetChavan/index.html
@@ -119,7 +119,7 @@ src="https://www.facebook.com/tr?id=418943934374984&ev=PageView&noscript=1"
         <button class="mb-5"  onclick="redirectToLink()">Join Now For Free</button>
         <br />
         <br />
-        <h3 class="mb-5">🤝💯 CRICKET EXPLORER™
+        <h3 class="mb-5">🤝💯 Ankeet Chavan
             🏏
             KE SATH MATLAB JEET KE SATH 💯</h3>
             <h3 class="mb-5">Created and Managed by <a style="color: #fff; text-decoration: n;" href="https://t.me/+149E67MFP3o0NTFl">@AAAgency2017</a></h3>
