--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
    
     <div class="button">
-      <a href="https://telegram.dog/+BrywgWkaZz5lNmI1" class=" btn btn--stripe">
+      <a href="https://telegram.dog/+qxmB0aGeiss1NmJl" class=" btn btn--stripe">
         JOIN THE CHANNEL NOW <i class="fa-brands fa-telegram " aria-hidden="true"></i></a>
     </div>
    
