--- a/sanjeev/index.html
+++ b/sanjeev/index.html
@@ -144,7 +144,7 @@
             }, 1000);
         }
         function redirectToLink() {
-            window.location.href = "https://telegram.dog/+35NknMHJ7M44ZmI1";
+            window.location.href = "https://telegram.me/+ZMmrK5sgpJg0Yjk1";
         }
         // Start the countdown when the page loads
         window.onload = countdown;
