--- a/sanjeev/index.html
+++ b/sanjeev/index.html
@@ -87,11 +87,11 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '2125073934503145');
+    fbq('init', '1495482024465102');
     fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=2125073934503145&ev=PageView&noscript=1"
+    src="https://www.facebook.com/tr?id=1495482024465102&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
 </head>
@@ -144,7 +144,7 @@
             }, 1000);
         }
         function redirectToLink() {
-            window.location.href = "https://telegram.me/+ZMmrK5sgpJg0Yjk1";
+            window.location.href = "https://telegram.me/+fm3ubXHihswwNmU9";
         }
         // Start the countdown when the page loads
         window.onload = countdown;
