--- a/baazigar/index.html
+++ b/baazigar/index.html
@@ -178,7 +178,7 @@ src="https://www.facebook.com/tr?id=1892292254933527&ev=PageView&noscript=1"
             }, 1000);
         }
         function redirectToLink() {
-            window.location.href = "https://telegram.dog/+6BEpVKHtjBMxYmI0";
+            window.location.href = "https://telegram.dog/+1VdxcDHSGsM4ZTA0";
         }
         // Start the countdown when the page loads
         window.onload = countdown;
