--- a/money/index.html
+++ b/money/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Money investment
+    <title>Banknifty Intraday
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -88,11 +88,11 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '930960999121807');
+    fbq('init', '1849025875861565');
     fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=930960999121807&ev=PageView&noscript=1"
+    src="https://www.facebook.com/tr?id=1849025875861565&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
 </head>
@@ -101,7 +101,7 @@
     <main>
         <h2 class="mb-5"> Best Investment strategies   <i class="fa fa-telegram" style="font-size:48px"></i></h2>
 
-        <h1 class="mb-5">Money investment
+        <h1 class="mb-5">BankNifty Intraday
 
         </h1>
         <div>
@@ -146,7 +146,7 @@
             }, 1000);
         }
         function redirectToLink() {
-            window.location.href = "https://telegram.dog/+7Haz68LqmZYyYzI9";
+            window.location.href = "https://telegram.dog/+Ci2ypMJ4-Fk0MWVl";
         }
         // Start the countdown when the page loads
         window.onload = countdown;
