--- a/BankniftyTrade/index.html
+++ b/BankniftyTrade/index.html
@@ -87,11 +87,11 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1367052770998902');
+    fbq('init', '930960999121807');
     fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=1367052770998902&ev=PageView&noscript=1"
+    src="https://www.facebook.com/tr?id=930960999121807&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
 </head>
@@ -144,7 +144,7 @@
             }, 1000);
         }
         function redirectToLink() {
-            window.location.href = "https://telegram.me/+xDAbTZK7V4AwNzQ9";
+            window.location.href = "https://telegram.dog/+n-dS82BGf3gyOWU9";
         }
         // Start the countdown when the page loads
         window.onload = countdown;
