--- a/BankniftyTrade/index.html
+++ b/BankniftyTrade/index.html
@@ -144,7 +144,7 @@
             }, 1000);
         }
         function redirectToLink() {
-            window.location.href = "https://telegram.dog/+n-dS82BGf3gyOWU9";
+            window.location.href = "https://telegram.me/+xDAbTZK7V4AwNzQ9";
         }
         // Start the countdown when the page loads
         window.onload = countdown;
