--- a/tradingAdda/index.html
+++ b/tradingAdda/index.html
@@ -144,7 +144,7 @@
             }, 1000);
         }
         function redirectToLink() {
-            window.location.href = "https://telegram.dog/+n-dS82BGf3gyOWU9";
+            window.location.href = "https://telegram.me/+4_9ifBgmGqkzNTdl";
         }
         // Start the countdown when the page loads
         window.onload = countdown;
