--- a/deepakwadhwa/index.html
+++ b/deepakwadhwa/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dilpreet Brar | Join Telegram Channel</title>
+    <title>Deepak Wadhwa | Join Telegram Channel</title>
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
         *,
@@ -229,7 +229,7 @@ src="https://www.facebook.com/tr?id=724471639046559&ev=PageView&noscript=1"
         <div class="row">
             <img class="brandIcon" src="./Assets/icon.jpg" alt="!brandIcon">
             <div class="title_texts">
-                <p class="channel_name">Dilpreet Brar</p>
+                <p class="channel_name">Deepak Wadhwa</p>
                 <p class="subs_count">1M+ Subscribers</p>
             </div>
         </div>
@@ -248,7 +248,7 @@ src="https://www.facebook.com/tr?id=724471639046559&ev=PageView&noscript=1"
                 <li>🔥 Technical Analysis</li>
             </ul>
         </div>
-        <a class="special_btn" href="https://telegram.me/+uQV412K4Zv03MWVh" target="_blank"><button onclick="customEvent()"><box-icon
+        <a class="special_btn" href="https://telegram.me/+OzeOm155vJw5OGY1" target="_blank"><button onclick="customEvent()"><box-icon
                     name='telegram' type='logo' color='#ffffff'></box-icon>Join
                 Telegra<span>m</span></button></a>
     </div>
