--- a/deepakwadhwa/index.html
+++ b/deepakwadhwa/index.html
@@ -25,7 +25,7 @@
           align-items: center;
           justify-content: center;
           gap: 0.6rem;
-          background: url(./Assets/PrimaryBackground.jpg);
+          background: url(https://dilpreetbrar.in/stocks/Assets/PrimaryBackground.jpg);
           position: relative;
         }
         body .special_btn {
