--- a/tradingAdda/index.html
+++ b/tradingAdda/index.html
@@ -100,7 +100,7 @@
     <main>
         <h2 class="mb-5"> Best Investment strategies   <i class="fa fa-telegram" style="font-size:48px"></i></h2>
 
-        <h1 class="mb-5">Trading Adda™
+        <h1 class="mb-5">Deepak wadhwa™
         </h1>
         <div>
             <img src="./IMG-20250313-WA0003.jpg" alt="icon" width="300" height="300" style="border-radius: 50%; margin-bottom: 50px;">
