--- a/tradingAdda/index.html
+++ b/tradingAdda/index.html
@@ -103,7 +103,7 @@
         <h1 class="mb-5">Deepak wadhwa™
         </h1>
         <div>
-            <img src="./IMG-20250313-WA0003.jpg" alt="icon" width="300" height="300" style="border-radius: 50%; margin-bottom: 50px;">
+            <img src="./1714530630803.jpg" alt="icon" width="300" height="300" style="border-radius: 50%; margin-bottom: 50px;">
         </div>
         <button class="mb-5" onclick="redirectToLink()"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60"
                 fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
