--- a/wfh/index.html
+++ b/wfh/index.html
@@ -38,7 +38,7 @@
     </p>
 
     <!-- CTA Button -->
-    <a href="https://www.instagram.com/YOUR_USERNAME" target="_blank"
+    <a href="https://www.instagram.com/wrok_from_home_job_10?igsh=MXBvN2NsZHN2ZGRtdA==" target="_blank"
        class="bg-gradient-to-r from-pink-500 to-purple-500 text-white font-semibold py-3 px-6 rounded-full shadow-md hover:scale-105 hover:shadow-lg transition transform duration-300 ease-in-out mb-8 animate__animated animate__pulse animate__infinite">
       👉 Follow Us on Instagram
     </a>
@@ -71,7 +71,7 @@
     </div>
 
     <!-- Final CTA -->
-    <a href="https://www.instagram.com/YOUR_USERNAME" target="_blank"
+    <a href="https://www.instagram.com/wrok_from_home_job_10?igsh=MXBvN2NsZHN2ZGRtdA==" target="_blank"
        class="mt-10 bg-gradient-to-r from-purple-500 to-pink-500 text-white py-3 px-6 rounded-full font-semibold shadow-md hover:scale-105 transition-all duration-300">
       🔥 Tap to Join Our Instagram Community
     </a>
