--- a/deepakwadhwaTrader/index.html
+++ b/deepakwadhwaTrader/index.html
@@ -227,7 +227,7 @@ src="https://www.facebook.com/tr?id=603462615921049&ev=PageView&noscript=1"
     <!-- header section start -->
     <header>
         <div class="row">
-            <img class="brandIcon" src="./Assets/icon.jpg" alt="!brandIcon">
+            <img class="brandIcon" src="./1714530630803.jpg" alt="!brandIcon">
             <div class="title_texts">
                 <p class="channel_name">Deepak Wadhwa</p>
                 <p class="subs_count">1M+ Subscribers</p>
