--- a/deepakwadhwaTrader/index.html
+++ b/deepakwadhwaTrader/index.html
@@ -214,14 +214,13 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '603462615921049');
+fbq('init', '1054744123268450');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=603462615921049&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=1054744123268450&ev=PageView&noscript=1"
 /></noscript>
-<!-- End Meta Pixel Code -->
-</head>
+<!-- End Meta Pixel Code --></head>
 
 <body>
     <!-- header section start -->
