--- a/tashan/index.html
+++ b/tashan/index.html
@@ -12,7 +12,7 @@
   <!-- DESKTOP VIEW -->
   <div class="hidden md:block">
     <header class="flex justify-between items-center px-8 py-4">
-      <img src="img/logo.png" alt="Tashan Win game" class="h-10">
+      <img src="https://tashanwinfun1.online/img/logo.png" alt="Tashan Win game" class="h-10">
       <div class="space-x-4">
         <button class="border border-yellow-400 text-yellow-400 px-4 py-2 rounded">Login Now</button>
         <button class="bg-gradient-to-r from-yellow-400 to-yellow-600 text-black px-4 py-2 rounded">Register Now</button>
@@ -20,7 +20,7 @@
     </header>
 
     <div class="flex justify-center">
-      <img src="img/banner.webp" alt="Tashan Win game Banner" class="rounded-lg max-w-4xl">
+      <img src="https://tashanwinfun1.online/img/banner.webp" alt="Tashan Win game Banner" class="rounded-lg max-w-4xl">
     </div>
 
     <div class="text-center mt-8">
@@ -73,7 +73,7 @@
 
   <div class="mt-6">
     <a href="https://www.tashanwin.org/#/register?invitationCode=71372411402">
-      <img src="img/banner.webp" alt="Banner" class="rounded-lg w-full">
+      <img src="https://tashanwinfun1.online/img/banner.webp" alt="Banner" class="rounded-lg w-full">
     </a>
   </div>
 
