--- a/tashan/index.html
+++ b/tashan/index.html
@@ -55,7 +55,7 @@
 <div class="block md:hidden px-4 py-6">
   <div class="flex justify-center mb-4">
     <a href="https://www.tashanwin.org/#/register?invitationCode=71372411402">
-      <img src="img/logo.png" alt="Tashan Win game" class="h-12">
+      <img src="https://tashanwinfun1.online/img/logo.png" alt="Tashan Win game" class="h-12">
     </a>
   </div>
 
