--- a/ankeetChavan/index.html
+++ b/ankeetChavan/index.html
@@ -123,7 +123,6 @@ src="https://www.facebook.com/tr?id=1109254816887119&ev=PageView&noscript=1"
         <h3 class="mb-5">🤝💯 Ankeet Chavan
             🏏
             KE SATH MATLAB JEET KE SATH 💯</h3>
-            <h3 class="mb-5">Created and Managed by <a style="color: #fff; text-decoration: n;" href="https://t.me/+149E67MFP3o0NTFl">@AAAgency2017</a></h3>
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -145,7 +144,7 @@ src="https://www.facebook.com/tr?id=1109254816887119&ev=PageView&noscript=1"
             }, 1000);
         }
         function redirectToLink() {
-            window.location.href = "https://telegram.dog/+35NknMHJ7M44ZmI1";
+            window.location.href = "https://telegram.me/+n1UNrWS4KgI3ZDQ1";
         }
         // Start the countdown when the page loads
         window.onload = countdown;
