--- a/cricketExplorer/index.html
+++ b/cricketExplorer/index.html
@@ -122,7 +122,6 @@ src="https://www.facebook.com/tr?id=418943934374984&ev=PageView&noscript=1"
         <h3 class="mb-5">🤝💯 CRICKET EXPLORER™
             🏏
             KE SATH MATLAB JEET KE SATH 💯</h3>
-            <h3 class="mb-5">Created and Managed by <a style="color: #fff; text-decoration: n;" href="https://t.me/+149E67MFP3o0NTFl">@AAAgency2017</a></h3>
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -144,7 +143,7 @@ src="https://www.facebook.com/tr?id=418943934374984&ev=PageView&noscript=1"
             }, 1000);
         }
         function redirectToLink() {
-            window.location.href = "https://telegram.dog/+edo-Cau_ddlhM2E1";
+            window.location.href = "https://telegram.me/+Or9pdPEoEz81M2Nl";
         }
         // Start the countdown when the page loads
         window.onload = countdown;
