--- a/roy/index.html
+++ b/roy/index.html
@@ -23,7 +23,7 @@ src="https://www.facebook.com/tr?id=1370827083948001&ev=PageView&noscript=1"
 <!-- End Meta Pixel Code -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Danny Toss</title>
+  <title>ROY DADA</title>
   <link rel="icon" href="./logo.jpg">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -127,7 +127,7 @@ src="https://www.facebook.com/tr?id=1370827083948001&ev=PageView&noscript=1"
   <main class="bodybox text-white  bg-black opacity-80  absolute w-full" style="height: 100vh;  z-index: -1 !important; overflow: hidden; " >
   </main>
   <header class="text-center py-2 " style="">
-    <h1 class="text-4xl font-extrabold" style="color:white ;">WELCOME TO Danny Toss king </h1>
+    <h1 class="text-4xl font-extrabold" style="color:white ;">WELCOME TO ROY DADA </h1>
     <img src="logo.jpg" class="w-24 h-24 rounded-full  place-self-center my-2 shadow-lg shadow-white" alt="">
     <p class="text-lg mt-2">🏏 IPL CRICKET ANALYST 🏏</p>
   </header>
@@ -154,12 +154,12 @@ src="https://www.facebook.com/tr?id=1370827083948001&ev=PageView&noscript=1"
 
   <!-- Call to Action -->
   <div class="text-center mt-8 grid place-items-center ">
-    <a href="https://telegram.me/+rNLILvV5ZYBhNjBl" >
+    <a href="https://telegram.me/+rURidxuma1czNmRk" >
       <button class="animated-button border-b-4 rounded-lg border-b-black flex place-items-center gap-1 font-bold py-4 text-white gap-2"  style="box-shadow: 0px 0px 0px 5px rgb(177, 116, 3); background-color:rgb(0, 99, 137); ">  
         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
           <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.287 5.906q-1.168.486-4.666 2.01-.567.225-.595.442c-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294q.39.01.868-.32 3.269-2.206 3.374-2.23c.05-.012.12-.026.166.016s.042.12.037.141c-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8 8 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629q.14.092.27.187c.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.4 1.4 0 0 0-.013-.315.34.34 0 0 0-.114-.217.53.53 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09"/>
         </svg>
-        JOIN Danny Toss TELEGRAM CHANNEL
+        JOIN ROY DADA TELEGRAM CHANNEL
       </button>
     </a>
     <p class="mt-4 text-sm font-medium uppercase">BBL 44/43 Pass | IPL 74/73 Pass | T20 World Cup 55/53 Pass | PSL 64/63</p>
@@ -172,7 +172,7 @@ src="https://www.facebook.com/tr?id=1370827083948001&ev=PageView&noscript=1"
 </div>
 </div>
   <footer class="text-center py-4 mt-8 absolute w-full bottom-0" style="background-color: red ;">
-    <p class="text-xs">© 2025 Danny Toss . All Rights Reserved.</p>
+    <p class="text-xs">© 2025 ROY DADA . All Rights Reserved.</p>
   </footer>
   <script>
     let timeLeft = 30; // Start at 30 seconds
