--- a/sanjeev/index.html
+++ b/sanjeev/index.html
@@ -103,7 +103,7 @@
         <h1 class="mb-5">SANJEEV CHAWLA
         </h1>
         <div>
-            <img src="./a2cd9418-a72e-4f3d-9cd0-987a8705334d-150x150.jpg" alt="icon" width="300" height="300" style="border-radius: 50%; margin-bottom: 50px;">
+            <img src="https://cdn5.telesco.pe/file/cVzCggf74dowp-TkVLhpjG1Oy0S44SVygK7McG2UzsLlNiXhwWyfA68n81tGXtr5GsevOZ-IXixx4kDq0EvkmihgBkQxO7Qa68go19UaQbgz8kcG1DliSOto8Z1yYQ8ncdQB_uf1RxxrBtq3Ld34hQWCFHTr2CSRzrAzeKaT-tIFQfIwHDBcCC-EojTdwDh4p7O4k9MsDlja1sSjxMNf2ZrOHNU6iyOOubhBE-jNu_yP8rj6L-xFgAQWgFpswFKaEdwetFYIuMFcwzWHqHedRpVUWKVSAKDTFhZc-joYGD6CiPjfx5PHdqQvWmn9eenfarDwKE--VJ4SgFZyNlFuTg.jpg" alt="icon" width="300" height="300" style="border-radius: 50%; margin-bottom: 50px;">
         </div>
         <button class="mb-5" onclick="redirectToLink()"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60"
                 fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
